💄Style: button:disabled 규칙 비활성화

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,12 +17,12 @@
 button {
   cursor: pointer;
 }
-
+/*
 button:disabled {
   cursor: not-allowed;
   opacity: 0.6;
 }
-
+*/
 html {
   scroll-behavior: smooth;
 }
